--- a/requirements.txt
+++ b/requirements.txt
@@ -1,221 +1,26 @@
-alabaster==0.7.6
-alembic==0.7.6
-astroid==1.3.6
-astropy==1.0.3
 Authomatic==0.1.0.post1
-Babel==1.3
-backports.datetime-timestamp==1.0.2.dev0
-backports.functools-lru-cache==1.0.2.dev0
-backports.method-request==1.0.1.dev0
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.4.0.2
-Beaker==1.7.0
-BeautifulSoup==3.2.1
-beautifulsoup4==4.3.2
-blinker==1.4.dev0
-blosc==1.2.7
-bloscpack==0.7.2
-boto==2.42.0
-Bottleneck==1.0.0
-bz2file==0.98
-CacheControl==0.11.5
-cchardet==0.3.5
-cdecimal==2.3
 certifi==2015.4.28
-cffi==1.1.2
-chardet==2.3.0
-colorama==0.3.3
-configobj==5.0.6+xy.1
-configparser==3.5.0
-cov-core==1.15.0
-coverage==3.7.1
-cryptography==1.0.dev1
-cssselect==0.9.1
-cx-Freeze==4.3.4
-cyordereddict==0.2.3.dev7
-datrie==0.7.1.dev37
-decorator==3.4.2
-distlib==0.2.0
 Django==1.10.1
-django-all-access==0.8.0
-django-filter==0.14.0
-django-openid-auth==0.11
-djangorestframework==3.4.6
-docutils==0.12
-ecdsa==0.13.1.dev0
 ed25519ll==0.6
-entrypoints==0.2.2
-enum34==1.0.4
-et-xmlfile==1.0.1
-faulthandler==2.4
-formlayout==1.0.15
-funcsigs==0.4
-functools32==3.2.3.post2
-funcy==1.7.1
-future==0.15.2
-futures==3.0.3
-gensim==0.13.1
-gevent==1.0.2
-gevent-websocket==0.9.5
-greenlet==0.4.7
-grin==1.2.1+xy1
-guidata==1.6.1
-guiqwt==2.3.2
-gunicorn==19.6.0
-h5py==2.5.0
-html5lib==0.99999
-idna==2.1.dev1
-ipaddress==1.0.7
-ipdb==0.8.1
-ipdbplugin==1.4.2
-ipykernel==4.4.1
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-jaraco.apt==1.0
-jaraco.classes==1.2
-jaraco.collections==1.1
-jaraco.context==1.3
-jaraco.functools==1.3
-jaraco.structures==1.0
-jaraco.text==1.4
-jaraco.ui==1.3.1
-jaraco.windows==3.4
-jdcal==1.3
-jedi==0.9.0
-Jinja2==2.7.3
-joblib==0.10.0
 jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.3.0
-jupyter-console==5.0.0
-jupyter-core==4.1.1
 keyring==5.3
-lda==1.0.4
-libnacl==1.4.3
-linecache2==1.0.0
-lockfile==0.10.2.post7
-logilab-common==0.63.2
 lxml==3.4.4
-mahotas==1.3.0
-Mako==1.0.1
-Markdown==2.6.6
-MarkupSafe==0.23
-matplotlib==1.4.3
-mistune==0.7.3
-mlxtend==0.3.0
-mock==1.0.1
-modernize==0.4
 mongoengine==0.10.6
-more-itertools==2.3.dev0
-nbconvert==4.2.0
-nbformat==4.1.0
-ndg-httpsclient==0.4.0
-netifaces==0.10.4
-nltk==3.2
-nose==1.3.7
-nose-cov==1.6
-nose-fixes==1.3
-notebook==4.2.2
-numexpr==2.4.3
 numpy==1.11.1
-numpydoc==0.6.dev0
-oauthlib==2.0.0
-objgraph==2.0.1.dev0
-openpyxl==2.4.0
-packaging==15.2
-pandas==0.18.1
-paramiko==1.15.2
-pathlib==1.0.1
-pathlib2==2.1.0
-patsy==0.3.0
-pbr==1.10.0
-pep8==1.6.2
-pickleshare==0.7.4
-Pillow==2.8.2
-plotly==1.12.9
-ply==3.6
-prompt-toolkit==1.0.7
-psutil==3.0.1
-py==1.4.30
-py2exe==0.6.9
 pyasn1==0.1.8
-pyasn1-modules==0.0.6
-PyAudio==0.2.8
-pycparser==2.14
-pycrypto==2.6.1
-pyemf==2.0.0
-pyflakes==0.9.2
-Pygments==2.0.2
-PyICU==1.9.2+xy.1
-PyJWT==1.4.2
-pyLDAvis==2.0.0
-pylint==1.4.3
-pyMinuit==1.2.1
-pymongo==3.3.0
-PyOpenGL==3.1.0
-PyOpenGL-accelerate==3.1.0
-pyOpenSSL==0.15.1
-pyparsing==2.0.3
-PyQt4==4.11.3
-pyreadline==2.0.6+xy.1
-PyStemmer==1.3.0
 pytest==3.0.1
-python-dateutil==2.4.2
-python-openid==2.2.5
-python-social-auth==0.2.21
-pytz==2015.4
-pywin==0.3.1
-pywin32==219
-PyYAML==3.11
-pyzmq==14.7.0
-qtconsole==4.2.1
-regex==2016.3.2
-reportlab==3.2.0
-requests==2.11.1
-requests-oauthlib==0.6.2
-rope==0.10.2
-sampy==1.2.1
-scandir==1.1.1.dev7
-scikit-learn==0.17.1
-scipy==0.15.1
-scp==0.10.2
-seaborn==0.7.1
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-smart-open==1.3.3
-snowballstemmer==1.2.1.dev1
-Sphinx==1.3.2
-sphinx-rtd-theme==0.1.8
-sphinxcontrib-plantuml==0.6
-spyder==2.3.5.2
-SQLAlchemy==1.0.6
-statsmodels==0.6.1
-STEPS==2.2.0
-tables==3.2.0
-Tempita==0.5.2
-textmining==1.0
-tornado==4.2
-traceback2==1.4.0
-traitlets==4.2.2
-ujson==1.33
-unittest2==1.0.1
-urllib3==1.10.4
-vaderSentiment==0.5
-veusz==1.23.1
-virtualenv==15.0.1
-virtualenvwrapper-win==1.2.1
-ViTables==2.2a1
-wcwidth==0.1.7
-Whoosh==2.7.0
-widgetsnbextension==1.2.6
-win-unicode-console==0.5
 wincertstore==0.2
-wsaccel==0.6.2
-wxPython==2.8.12.1
-wxPython-common==2.8.12.1
-XlsxWriter==0.9.3
-yappi==0.94
-yg.lockfile==2.0
-zc.lockfile==1.1.0
+Cython==0.25.1
+pyOpenSSL==16.2.0
+backports.functools_lru_cache==1.3
+com==1.0.0
+protobuf==3.1.0.post1
+ipaddr==2.1.11
+java==0.0.1
+ndg_httpsclient==0.4.2
+nt==0.0.0
+org==1.0.0
+redis==2.10.5
+djangorestframework==3.5.3
+setuptools_svn==1.1
+pyxdg==0.25
